# adv-steer

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README.md  github_setup.sh  main.py  pyproject.toml  reasoning.ipynb  requirements.in  requirements.txt  setup.sh  thought_token_forcing.ipynb
activations/: deepseek_extraction_cautious_metadata.pkl  deepseek_extraction_noncautious_metadata.pkl  deepseek_layer_15_cautious_activations.npy  deepseek_layer_15_noncautious_activations.npy  deepseek_layer_16_cautious_activations.npy  deepseek_layer_16_noncautious_activations.npy  deepseek_layer_17_cautious_activations.npy  deepseek_layer_17_noncautious_activations.npy  deepseek_layer_18_cautious_activations.npy  deepseek_layer_18_noncautious_activations.npy  deepseek_layer_19_cautious_activations.npy  deepseek_layer_19_noncautious_activations.npy  deepseek_layer_20_cautious_activations.npy  deepseek_layer_20_noncautious_activations.npy  deepseek_layer_21_cautious_activations.npy  deepseek_layer_21_noncautious_activations.npy  deepseek_layer_23_cautious_activations.npy  deepseek_layer_23_noncautious_activations.npy  deepseek_layer_27_cautious_activations.npy  deepseek_layer_27_noncautious_activations.npy  deepseek_layer_31_cautious_activations.npy  deepseek_layer_31_noncautious_activations.npy
archive/: advbench.py  apply_template.ipynb  nanogcg.ipynb  reasoning.ipynb  thought_token_forcing.ipynb
attack/: LICENSE  README.md  __init__.py  attack.py  experiments.py  gcg.py  internal.py  objective.py  operators.py  requirements.txt  run_experiments.py  templates.py  util.py  utils.py  victim.py
attacks/: README.md  orthochat.py  requirements.txt
cautious_dir/: cautious_dir_standard_plus.pt
chat/: README.md  orthochat.py
dataset/: activation_addition_outputs.csv  advbench_instruction.csv  advbench_reasoning.csv  advbench_reasoning_8B.csv  advbench_reasoning_template.csv  alpaca_reasoning.csv  (+22 more)
(+174 files in other folders)
