[project]
name = "adv-steer"
version = "0.1.0"
description = "Adversarial Manipulation of Reasoning Models using Internal Representations"
authors = [
  {name = "Kureha Yamaguchi", email = "ky295@cantab.ac.uk"},
  {name = "Benjamin Etheridge"},
  {name = "Andy Arditi"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "nnsight>=0.4.7",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
